--- a/src/app/table/update/update.component.html
+++ b/src/app/table/update/update.component.html
@@ -1,9 +1,9 @@
 <div class="form-group">
-    <label for="brand">Brand</label>
+    <label for="colour">Colour</label>
     <input type="text" class="form-control" id="brand" [(ngModel)]="data.colour" name="brand">
   </div>
   <div class="form-group">
-    <label for="model">Model</label>
+    <label for="engine">Engine</label>
     <input type="text" class="form-control" id="model" [(ngModel)]="data.engineType" name="model">
   </div>
 
